@@ -9,82 +9,80 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.oracle.coherence.kubernetes</groupId>
-    <artifactId>examples-parent</artifactId>
-    <version>1.0.0</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-
+  <groupId>com.oracle.coherence.examples.kubernetes</groupId>
   <artifactId>deployment-example</artifactId>
   <name>Coherence Operator Deployment Example</name>
   <version>1.0.0</version>
 
   <properties>
-    <docker.version>${project.version}</docker.version>
+    <coherence.group.id>com.oracle.coherence.ce</coherence.group.id>
+    <coherence.version>20.12.1</coherence.version>
+
+    <helidon.version>1.3.1</helidon.version>
+
+    <jib.version>2.8.0</jib.version>
+    <image.version>${project.version}</image.version>
+
+    <maven.exec.plugin.version>1.6.0</maven.exec.plugin.version>
+
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.version>3.6.0</maven.version>
   </properties>
 
   <dependencies>
-    <!-- module dependencies -->
     <dependency>
       <groupId>${coherence.group.id}</groupId>
       <artifactId>coherence</artifactId>
+      <version>${coherence.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>${coherence.group.id}</groupId>
       <artifactId>coherence-management</artifactId>
+      <version>${coherence.version}</version>
     </dependency>
 
     <dependency>
       <groupId>${coherence.group.id}</groupId>
       <artifactId>coherence-metrics</artifactId>
+      <version>${coherence.version}</version>
     </dependency>
 
     <dependency>
       <groupId>io.helidon.bundles</groupId>
       <artifactId>helidon-bundles-webserver</artifactId>
+      <version>${helidon.version}</version>
     </dependency>
-
   </dependencies>
 
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>${maven.enforcer.plugin.version}</version>
-        <executions>
-          <execution>
-            <id>enforce</id>
-            <phase>validate</phase>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <requireMavenVersion>
-                  <version>[${maven.version},)</version>
-                </requireMavenVersion>
-                <requireJavaVersion>
-                  <version>${java.version}</version>
-                </requireJavaVersion>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven.compiler.plugin.version}</version>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>${jib.version}</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <from>
+            <image>gcr.io/distroless/java:11</image>
+          </from>
+          <to>
+            <image>${project.artifactId}</image>
+            <tags>
+              <tag>${image.version}</tag>
+            </tags>
+          </to>
+          <container>
+            <mainClass>com.tangosol.net.Coherence</mainClass>
+            <ports>
+              <port>8080</port>
+            </ports>
+          </container>
+          <containerizingMode>packaged</containerizingMode>
         </configuration>
       </plugin>
-     
+
       <!-- run com.tangosol.coherence.dslquery.QueryPlus via mvn exec:java -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -126,63 +124,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>docker</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <property>
-          <name>docker</name>
-        </property>
-      </activation>
-       <build>
-        <plugins>
-          <plugin>
-            <groupId>com.google.cloud.tools</groupId>
-            <artifactId>jib-maven-plugin</artifactId>
-            <version>${jib.version}</version>
-            <configuration>
-              <from>
-                <image>gcr.io/distroless/java:11</image>
-              </from>
-              <to>
-                <image>${project.artifactId}</image>
-                <tags>
-                  <tag>${docker.version}</tag>
-                </tags>
-              </to>
-              <container>
-                <!-- good defaults intended for containers -->
-                <jvmFlags>
-                  <jmxFlag>-server</jmxFlag>
-                  <jmxFlag>-Djava.awt.headless=true</jmxFlag>
-                  <jmxFlag>-XX:+UnlockExperimentalVMOptions</jmxFlag>
-                  <jmxFlag>-XX:+UseCGroupMemoryLimitForHeap</jmxFlag>
-                  <jmxFlag>-XX:InitialRAMFraction=2</jmxFlag>
-                  <jmxFlag>-XX:MinRAMFraction=2</jmxFlag>
-                  <jmxFlag>-XX:MaxRAMFraction=2</jmxFlag>
-                  <jmxFlag>-XX:+UseG1GC</jmxFlag>
-                </jvmFlags>
-                <mainClass>com.tangosol.net.DefaultCacheServer</mainClass>
-                <ports>
-                  <port>8080</port>
-                </ports>
-                <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
-              </container>
-              <containerizingMode>packaged</containerizingMode>
-            </configuration>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>${jib.goal}</goal>
-                </goals>
-                <phase>package</phase>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
